--- a/themes/Bate_FFC/config.ini
+++ b/themes/Bate_FFC/config.ini
@@ -18,6 +18,22 @@
             <tag>[THAMDOYKIEN]</tag>
         </position>
         <position>
+            <name>MENU_DOC</name>
+            <tag>[MENU_DOC]</tag>
+        </position>
+        <position>
+            <name>VIDEO</name>
+            <tag>[VIDEO]</tag>
+        </position>
+        <position>
+            <name>NOIDUNG</name>
+            <tag>[NOIDUNG]</tag>
+        </position>
+        <position>
+            <name>QUANGCAO</name>
+            <tag>[QUANGCAO]</tag>
+        </position>
+        <position>
             <name>PERSONALAREA</name>
             <tag>[PERSONALAREA]</tag>
         </position>
