--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,48 @@
-# Base ignore
-/.buildpath
 /.project
-/.settings
-/assets/css/*.opt.css
+/.settings/
+/.buildpath
+
+/README.md
+/favicon.ico
+/index.php
+/LICENSE.txt
+/robots.php
+/robots.txt
+/web.config
+/admin/
+/assets/
+/data/
+/includes/
+/install/
+/uploads/
+/vendor/
+/.htaccess
+/CHANGELOG.txt
 /config.php
-/data/cache/*
-/data/config/config_ini.*.php
-/data/config/diagnostic-*.xml
-/data/config/efloodip.php
-/data/config/banip.php
-/data/config/admin_config.php
-/data/config/disable_site_content.*.txt
-/data/logs/data_logs/
-/data/logs/dump_backup/
-/data/logs/error_logs/
-/data/logs/ip_logs/
-/data/logs/ref_logs/
-/data/logs/voting_logs/
-/data/tmp/*
-/uploads/logo_*
-/assets/logo_*
-/install/default.php
-
-composer.lock
-#vendor test ignore 
-/vendor/**/demo/
-/vendor/**/example/
-/vendor/**/examples/
-/vendor/**/test/
-/vendor/**/tests/
-/vendor/**/Tests/
-/vendor/**/travis*
-/vendor/**/.travis.yml
-/vendor/**/.scrutinizer.yml
-/vendor/**/phpunit.xml*
-/vendor/**/phpunit.php
-
-#vendor docs ignore
-/vendor/**/doc/
-/vendor/**/docs/
-/vendor/**/readme*
-/vendor/**/README*
-/vendor/**/changelog*
-/vendor/**/CHANGELOG*
-/vendor/**/FAQ*
-/vendor/**/CONTRIBUTING*
-/vendor/**/HISTORY*
-/vendor/**/UPGRADING*
-/vendor/**/UPGRADE*
-/vendor/**/package*
-/vendor/**/phpunit.php
-/vendor/**/.gitignore
-/vendor/**/composer.*
-
-# Ignore some uploads, assets dir
-/assets/download
-/assets/*.jpg
-/uploads/download
-/uploads/users/*.jpg
-/uploads/contact/*.jpg
-/uploads/about/*.jpg
-/uploads/banners/*.jpg
-/uploads/page/*.jpg
-/uploads/menu/
-/uploads/news/
-
-# Allow default file
-!/uploads/banners/bongoaigiao.jpg
-!/uploads/banners/vinades.jpg
-!/uploads/banners/vndads___05.jpg
-!/uploads/banners/webnhanh_vn.png
-!/data/cache/.htaccess
-!/data/cache/index.html
-!/data/tmp/index.html
-/.jsbeautifyrc
-/.php-cs-fixer.php
-/.vscode
+/CONTRIBUTING.md
+/COPYRIGHT.txt
+/.gitattributes
+/composer.json
+/LICENSE
+# Ignore fix module files and directories.
+/modules/*
+!/modules/videoclips
+!/modules/videoclips/*
+/themes/*
+!/themes/admin_default/css/videoclips.css
+!/themes/admin_default/js/videoclips.js
+!/themes/admin_default/images/videoclips
+!/themes/admin_default/images/videoclips/*
+!/themes/admin_default/modules/videoclips
+!/themes/admin_default/modules/videoclips/*
+!/themes/default/css/fonts/
+!/themes/default/css/flexslider.css
+!/themes/default/css/videoclips.css
+!/themes/default/js/jquery.flexslider.js
+!/themes/default/js/videoclips*.js
+!/themes/default/images/videoclips
+!/themes/default/images/videoclips/*
+!/themes/default/modules/videoclips
+!/themes/default/modules/videoclips/*
+/error.php
+vinades/readme.txt
