--- a/themes/Bate_FFC/config.ini
+++ b/themes/Bate_FFC/config.ini
@@ -82,6 +82,10 @@
             <tag>[FOOTER_SITE]</tag>
         </position>
         <position>
+            <name>QUANGCAO</name>
+            <tag>[QUANGCAO]</tag>
+        </position>
+        <position>
             <name>FEATURED PRODUCT</name>
             <tag>[FEATURED_PRODUCT]</tag>
         </position>
