--- a/themes/Bate_FFC/config.ini
+++ b/themes/Bate_FFC/config.ini
@@ -82,6 +82,18 @@
             <tag>[FOOTER_SITE]</tag>
         </position>
         <position>
+            <name>VIDEO</name>
+            <tag>[VIDEO]</tag>
+        </position>
+        <position>
+            <name>NOIDUNG</name>
+            <tag>[NOIDUNG]</tag>
+        </position>
+        <position>
+            <name>QUANGCAO</name>
+            <tag>[QUANGCAO]</tag>
+        </position>
+        <position>
             <name>QUANGCAO</name>
             <tag>[QUANGCAO]</tag>
         </position>
